setup/k8s/03-apps/00-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: pinger
        image: python:3-slim
        command: ["/bin/sh", "-c", "pip install websockets && python3 -u /app/pinger.py"]
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - name: content
          subPath: home/backend/pinger.py
          mountPath: /app/pinger.py
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: content
          subPath: home/frontend
          mountPath: /usr/share/nginx/html
        - name: content
          subPath: home/nginx/default.conf
          mountPath: /etc/nginx/conf.d/default.conf
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: media
spec:
  selector:
    app: home
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-lan
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.media.lan`)
      kind: Rule
      services:
        - name: home
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-lan-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.media.lan`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: media
      services:
        - name: home
          port: 80
