setup/k8s/03-apps/02-emby-external.conditional.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  ports:
    - name: webui
      port: 8096
      targetPort: 8096
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: emby
  namespace: media
subsets:
  - addresses:
      - ip: "${DOCKER_HOST_IP}"
    ports:
      - name: webui
        port: 8096
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby-lan
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`emby.media.lan`)
      kind: Rule
      services:
        - name: emby
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby-wan
  namespace: media
spec:
  entryPoints:
    - web-wan
    - websecure-wan
  routes:
    - match: Host(`emby.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: emby
          port: 8096
  tls: {}
