setup/k8s/03-apps/02-emby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      priorityClassName: critical-media
      containers:
      - name: emby
        image: emby/embyserver_arm64v8:latest
        ports:
        - name: webui
          containerPort: 8096
        - name: discovery
          containerPort: 7359
          protocol: UDP
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
        livenessProbe:
          tcpSocket:
            port: 8096
          initialDelaySeconds: 30
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8096
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: configs-source
          mountPath: /config
          subPath: emby
        - name: media
          mountPath: /media
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  selector:
    app: emby
  ports:
    - name: webui
      port: 8096
      targetPort: 8096
      nodePort: 8096
    - name: discovery
      port: 7359
      targetPort: 7359
      nodePort: 7359
      protocol: UDP
  type: NodePort
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby-lan
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
    - websecure-alt
  routes:
    - match: Host(`emby.media.lan`)
      kind: Rule
      services:
        - name: emby
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby-wan
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
    - websecure-alt
  routes:
    - match: Host(`emby.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: emby
          port: 8096
