setup/k8s/03-apps/02-plex.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  ports:
    - name: pms
      port: 32400
      protocol: TCP
      targetPort: 32400
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: media
subsets:
  - addresses:
      - ip: "${DOCKER_HOST_IP}"
    ports:
      - name: pms
        port: 32400
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-lan
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`plex.media.lan`)
      kind: Rule
      services:
        - name: plex
          port: 32400
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-wan
  namespace: media
spec:
  entryPoints:
    - web-wan
    - websecure-wan
  routes:
    - match: Host(`plex.${WAN_HOSTNAME}`)
      kind: Rule
      middlewares:
        - name: plex-local-mask
          namespace: media
      services:
        - name: plex
          port: 32400
  tls: {}
