setup/k8s/03-apps/03-emby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      priorityClassName: critical-media
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
      - name: emby
        image: emby/embyserver_arm64v8:latest
        ports:
        - name: webui
          containerPort: 8096
        - name: discovery
          containerPort: 7359
          protocol: UDP
        livenessProbe:
          tcpSocket:
            port: 8096
          initialDelaySeconds: 30
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8096
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: configs-source
          mountPath: /config
          subPath: emby
        - name: media
          mountPath: /media
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  selector:
    app: emby
  ports:
    - name: webui
      port: 8096
      targetPort: 8096
    - name: discovery
      port: 7359
      targetPort: 7359
      protocol: UDP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby-ingress
  namespace: media
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - "emby.media.lan"
      secretName: media-lan-tls
    - hosts:
      - "emby.apedamo.duckdns.org"
      secretName: media-wan-tls
  rules:
  - host: "emby.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port:
              number: 8096
  - host: "emby.apedamo.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port:
              number: 8096
