setup/k8s/03-apps/03-jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jackett:latest
        ports:
        - containerPort: 9117
        livenessProbe:
          tcpSocket:
            port: 9117
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 9117
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: configs-source
          mountPath: /config
          subPath: jackett
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  selector:
    app: jackett
  ports:
    - port: 9117
      targetPort: 9117
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
  annotations:

spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "jackett.media.lan"
    secretName: media-lan-tls
  rules:
  - host: "jackett.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
