setup/k8s/03-apps/03-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: ${RADARR_IMAGE_NAME}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7878
        livenessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: configs-source
          mountPath: /config
          subPath: radarr
        - name: downloads
          mountPath: /downloads
        - name: media
          mountPath: /media
        - name: scripts
          mountPath: /opt/scripts
          subPath: arr
          readOnly: true
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: scripts
        persistentVolumeClaim:
          claimName: scripts-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:

spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "radarr.media.lan"
    secretName: media-lan-tls
  rules:
  - host: "radarr.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
