setup/k8s/03-apps/05-slskd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      containers:
      - name: slskd
        image: slskd/slskd:latest
        ports:
          - name: slskd-webui
            containerPort: 5030
          - name: slskd-peer
            containerPort: 50300
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        livenessProbe:
          tcpSocket:
            port: 5030
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 5
        readinessProbe:
          tcpSocket:
            port: 5030
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 5
        volumeMounts:
        - name: configs
          mountPath: /app
          subPath: slskd
        - name: downloads
          mountPath: /app/downloads
        - name: media
          mountPath: /music
          subPath: Music
      volumes:
      - name: configs
        persistentVolumeClaim:
          claimName: configs-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: media
spec:
  selector:
    app: slskd
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: slskd-webui
      port: 5030
      targetPort: 5030
    - name: slskd-peer
      port: 50300
      targetPort: 50300
      nodePort: 50300
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd-lan
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`slskd.media.lan`)
      kind: Rule
      services:
        - name: slskd
          port: 5030
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd-lan-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`slskd.media.lan`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: media
      services:
        - name: slskd
          port: 5030
