setup/k8s/03-apps/07-lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: "${LIDARR_IMAGE_NAME}"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8686
          name: lidarr
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          tcpSocket:
            port: 8686
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8686
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: configs
          mountPath: /config
          subPath: lidarr
        - name: downloads
          mountPath: /downloads
        - name: media
          mountPath: /media
        - name: scripts
          mountPath: /opt/scripts
          subPath: arr
          readOnly: true
      volumes:
      - name: configs
        persistentVolumeClaim:
          claimName: configs-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: scripts
        persistentVolumeClaim:
          claimName: scripts-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - port: 8686
      targetPort: 8686
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-lan
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.media.lan`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-lan-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lidarr.media.lan`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: media
      services:
        - name: lidarr
          port: 8686
